// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExportDropdown handles click to show menu with feature flags 1`] = `
<div>
  <CustomizedPrimaryButton
    ariaLabel="export options menu"
    data-automation-id="report-export-dropdown"
    menuIconProps={
      {
        "iconName": "ChevronDown",
      }
    }
    onClick={[Function]}
    text="Export"
  />
  <ContextualMenu
    id="report-export-dropdown-menu"
    items={
      [
        {
          "download": "A file name",
          "href": "a file url",
          "key": "html",
          "onClick": [Function],
        },
        {
          "download": "json file name",
          "href": undefined,
          "key": "json",
          "onClick": [Function],
        },
        {
          "download": undefined,
          "href": undefined,
          "key": "codepen",
          "onClick": [Function],
        },
      ]
    }
    onDismiss={[Function]}
    target="test target"
  />
</div>
`;

exports[`ExportDropdown handles click to show menu with feature flags but missing json 1`] = `
<div>
  <CustomizedPrimaryButton
    ariaLabel="export options menu"
    data-automation-id="report-export-dropdown"
    menuIconProps={
      {
        "iconName": "ChevronDown",
      }
    }
    onClick={[Function]}
    text="Export"
  />
  <ContextualMenu
    id="report-export-dropdown-menu"
    items={
      [
        {
          "download": "A file name",
          "href": "a file url",
          "key": "html",
          "onClick": [Function],
        },
        {
          "download": undefined,
          "href": undefined,
          "key": "codepen",
          "onClick": [Function],
        },
      ]
    }
    onDismiss={[Function]}
    target="test target"
  />
</div>
`;

exports[`ExportDropdown handles click to show menu without feature flags 1`] = `
<div>
  <CustomizedPrimaryButton
    ariaLabel="export options menu"
    data-automation-id="report-export-dropdown"
    menuIconProps={
      {
        "iconName": "ChevronDown",
      }
    }
    onClick={[Function]}
    text="Export"
  />
  <ContextualMenu
    id="report-export-dropdown-menu"
    items={
      [
        {
          "download": "A file name",
          "href": "a file url",
          "key": "html",
          "onClick": [Function],
        },
      ]
    }
    onDismiss={[Function]}
    target="test target"
  />
</div>
`;

exports[`ExportDropdown renders without menu items 1`] = `
<div>
  <CustomizedPrimaryButton
    ariaLabel="export options menu"
    data-automation-id="report-export-dropdown"
    menuIconProps={
      {
        "iconName": "ChevronDown",
      }
    }
    onClick={[Function]}
    text="Export"
  />
</div>
`;

exports[`ExportDropdown should dismiss the contextMenu 1`] = `
<div>
  <CustomizedPrimaryButton
    ariaLabel="export options menu"
    data-automation-id="report-export-dropdown"
    menuIconProps={
      {
        "iconName": "ChevronDown",
      }
    }
    onClick={[Function]}
    text="Export"
  />
</div>
`;
